[tool.poetry]
name = "repl_nix_membership-manager-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.15"
telegram = "^0.0.1"
telebot = "^0.0.5"
requests = "^2.31.0"
yfinance = "^0.2.28"
Flask = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
